# Full_rag-One

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  implementation_plan.md  prd.txt  task.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: automation_agent.py  base_agent.py  code_agent.py  memory_agent.py  orchestrator.py  planning_agent.py  research_agent.py
backend/app/agents/prompts/: code_review.txt  planning.txt  research.txt
backend/app/api/: router.py
backend/app/core/: dependencies.py  events.py  exceptions.py  limits.py  middleware.py  security.py
backend/app/db/: session.py
backend/app/memory/: manager.py  short_term.py
backend/app/models/: __init__.py  base.py  conversation.py  document.py  memory.py  user.py  workflow.py
backend/app/rag/: chunking.py  embeddings.py  ingestion.py  retriever.py  vector_store.py
backend/app/repositories/: __init__.py  base.py  conversation_repo.py  document_repo.py  memory_repo.py  user_repo.py  workflow_repo.py
backend/app/services/: __init__.py  auth_service.py  chat_service.py  llm_client.py  repo_service.py  workflow_service.py
backend/app/workers/: celery_app.py  ingestion_tasks.py  repo_tasks.py  workflow_tasks.py
backend/storage/: e6651a89-9190-4583-9306-1e01a643e965.txt
backend/tests/: conftest.py
backend/tests/unit/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_verification.py
frontend/: Dockerfile  (+3 more)
(+35 files in other folders)
