[project]
name = "ai-workspace-os-backend"
version = "0.1.0"
description = "AI Workspace OS Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic-settings>=2.2.1",
    "uvicorn>=0.28.0",
    "structlog>=24.1.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.8.0",
    "sqlalchemy>=2.0.28",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "redis>=5.0.3",
    "httpx>=0.27.0",
    "email-validator>=2.1.1",
    "groq>=0.9.0",
    "tenacity>=8.3.0",
    "pypdf>=4.1.0",
    "python-docx>=1.1.0",
    "sentence-transformers>=2.5.1",
    "chromadb>=0.4.24",
    "celery>=5.3.6",
    "python-multipart>=0.0.9",
    "langgraph>=0.0.30",
    "langchain-core>=0.1.30",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
    "ruff>=0.3.3",
    "aiosqlite>=0.20.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "T20", "RET", "SIM", "ARG"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


